2006-03-22  Don Porter  <dgp@users.sourceforge.net>

	*** 8.4.13 TAGGED FOR RELEASE ***

	* changes:	Updates for next RC.

2006-03-21  Daniel Steffen  <das@users.sourceforge.net>

	* unix/configure.in: fix detection of symbols build when enabling
	TkAqua debug code; filter nm output of libtclstub better to avoid
	error on intel macs [Bug 1415789].
	* unix/configure: autoconf-2.13

2006-03-20  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tkUndo.c (TkUndoSetDepth): Fix a crash in the undo stack
	code. [Bug 1380427, Patch 1391939] Thanks to <lz_ufo@tin.it> for
	reporting and Ludwig Callewaert for the fix.

2006-03-17  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/clrpick.tcl:   bug #1451587: avoid using abbreviated
	* library/palette.tcl:   sub-commands in core scripts as this can
	* library/scale.tcl:     cause problems with mega-widget libraries
	* library/scrlbar.tcl:   like snit.
	* library/tkfbox.tcl:
	* library/xmfbox.tcl:

2006-03-16  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* library/msgs/pt.msg: Messages for Portuguese (strictly just for
	Brazilian Portuguese, but they'll do until we get other Portuguese
	speakers localize) from Ricardo Jorge <ricardoj@users.sf.net> and
	Silas Justiano <silasj@users.sf.net>. Many thanks! [Bug 1405069]

	* generic/tkImgPhoto.c (ImgPhotoCmd, Tk_PhotoPutBlock)
	(Tk_PhotoPutZoomedBlock): Added hack to detect copying of a photo with
	a simple alpha channel and skip calling ToggleComplexAlphaIfNeeded.
	This should speed up many photo-to-photo copies, keeping the cost of
	the alpha channel down.

2006-03-15  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tkImgPhoto.c (Tk_PhotoPutBlock, Tk_PhotoPutZoomedBlock): Try
	to squelch performance issue with code that writes to large images by
	single pixels. Masses of thanks to George Staplin for helping to trace
	this down to the COMPLEX_ALPHA flag handling code. [Bug 1409140]

2006-03-13  Don Porter  <dgp@users.sourceforge.net>
